epserde/tests/fail/unknown_type_attr.stderr
error: expected "zero_copy", "deep_copy", "bound", or "full_copy"
  --> tests/fail/unknown_type_attr.rs:11:11
   |
11 | #[epserde(foo)]
   |           ^^^
